@@ -151,3 +151,7 @@ is decoded and scanned
 2009-04-27 R Scharpf - committed version 1.3.1
 
 * Fixed bug in nonpolymorphic() function
+
+2009-05-07 Matt Ritchie - committed version 1.3.2
+
+* Updated usage of sampleNames() on NChannelSet objects in Illumina functions to maintain consistency with Biobase
